# skychimp_1

./: .env.sample  README.md  fixture_data.json  pyproject.toml  requirements.txt
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_entry_detail.html
config/: settings.py  urls.py
mailing/: admin.py  forms.py  models.py  services.py  urls.py  views.py
mailing/management/commands/: change_status_to_started.py  send_mails_regular.py
mailing/migrations/: 0001_initial.py  0002_mailing_updated_at.py  0003_client_owner_mailing_owner.py
mailing/templates/mailing/: home.html  mailing_card.html  mailing_delete.html  mailing_form.html  mailing_list.html
mailing/templatetags/: custom_tags.py
static/css/: form-validation.css
static/js/: holder.min.js
templates/: base.html
users/: context_processors.py  forms.py  models.py  services.py  urls.py  views.py
users/management/commands/: create_manager.py  create_superuser.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  registration.html  user_update.html  users_list.html
